# rsserpent-plugin-bilibili

./: .pre-commit-config.yaml  pyproject.toml
rsserpent_plugin_bilibili/: random_ua.py  utils.py
rsserpent_plugin_bilibili/user/: bangumi.py  video.py
