[tool.poetry]
name = "rsserpent-plugin-bilibili"
version = "0.1.0"

authors = ["creedowl <creedowl@gmail.com>"]
description = "An rsserpent plugin for bilibili.com."
keywords = ["rss"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.0"
rsserpent = {git = "https://github.com/dearrrfish/rsserpent.git"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.15.0"
# testing
pytest = "^6.2.4"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
requests = "^2.26.0"

[tool.poetry.plugins."rsserpent.plugin"]
"bilibili" = "rsserpent_plugin_bilibili:plugin"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[tool.black]
include = '\.pyi?$'
target-version = ["py37"]

[tool.coverage.run]
include = ["rsserpent_plugin_bilibili/*"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
lines_after_imports = 2
profile = "black"

[tool.nitpick]
cache = "1 day"
style = "https://raw.githubusercontent.com/RSSerpent/RSSerpent/master/styles/main.toml"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
